<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_maps"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/bottom_navigation_menu_maps"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_list_view"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/bottom_navigation_menu_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_workmates"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/bottom_navigation_menu_workmates"
        app:showAsAction="ifRoom" />
</menu>