<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/no_lunch_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sad_smiley"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="@dimen/default_margin"
    android:text="@string/oops"
    android:textSize="@dimen/default_title_size"
    android:textColor="@color/colorPrimary"
    android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/default_large_margin"
        android:textSize="@dimen/default_middle_size"
        android:text="@string/select_lunch"
        android:textColor="@color/ColorBlack"/>

    <Button
        android:id="@+id/back_to_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/back_to_map"/>
</LinearLayout>