<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.activities.MainActivity">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_screen_blur" />

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- IMAGE VIEW FIREBASE OC -->
        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/logo" />

        <!-- TITLE FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/ColorWhite"
            android:textSize="60sp"
            android:textStyle="bold" />

        <!-- DESCRIPTION FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_description"
            android:textColor="@color/ColorWhite"
            android:textSize="13sp"
            android:textStyle="italic" />

        <!-- BUTTONS CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_large_margin"
            android:gravity="bottom"
            android:orientation="vertical">

            <!-- BUTTON LOGIN -->
            <Button
                android:id="@+id/main_activity_button_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:background="@drawable/button_radius_primary_color"
                android:padding="@dimen/default_large_margin"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
