<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/waiters"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.profile.ProfileActivity">

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <!-- PROFILE IMAGE -->
            <ImageView
                android:id="@+id/profile_activity_imageview_profile"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/user_default_white" />

        </LinearLayout>

        <!-- PROFILE USERNAME -->
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="horizontal"
        android:layout_gravity="center"
            android:gravity="center">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:text="@string/text_input_username"
        android:textColor="@color/ColorWhite"
        android:textSize="@dimen/default_middle_size"
        android:textStyle="bold" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/profile_activity_edit_text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:backgroundTint="@color/ColorWhite"
            android:maxLines="1"
            android:text="@string/text_input_username"
            android:textColor="@color/ColorWhite"
            android:textSize="@dimen/default_middle_size" />

        </LinearLayout>
        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email"
                android:textColor="@color/ColorWhite"
                android:textSize="@dimen/default_middle_size"
                android:textStyle="bold" />

            <!-- PROFILE EMAIL -->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/profile_activity_edit_text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ColorWhite"
                android:paddingLeft="@dimen/default_margin"
                android:paddingRight="@dimen/default_margin"
                android:maxLines="1"
                android:textColor="@color/ColorWhite"
                android:textSize="@dimen/default_middle_size" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center">

            <!-- PROGRESS BAR -->
            <ProgressBar
                android:id="@+id/profile_activity_progress_bar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/default_large_margin"
                android:layout_centerInParent="true"
                android:visibility="invisible"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_large_margin"
                android:padding="@dimen/default_large_margin"
                android:gravity="bottom|center"
                android:layout_gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textAllCaps="true"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- BUTTON UPDATE USERNAME -->
        <Button
            android:id="@+id/profile_activity_button_update"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_green_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_update_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size"/>

        <!-- BUTTON SIGN OUT -->
        <Button
            android:id="@+id/profile_activity_button_sign_out"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_accent_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_sign_out_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTON DELETE ACCOUNT -->
        <Button
            android:id="@+id/profile_activity_button_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_error_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_delete_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>
</LinearLayout>
