<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_places_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.placesDetail.PlacesDetailActivity">

    <include
        layout="@layout/no_lunch_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

<android.support.v7.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="0.5"
    app:cardBackgroundColor="@color/ColorWhite"
    app:cardElevation="2dp">

    <RelativeLayout
        android:id="@+id/detail_fragment_image_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detail_fragment_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/detail_fragment_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/detail_fragment_image_view"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@color/ColorWhite"
            android:src="@drawable/add_icon"
            android:tint="@color/ColorWhite"
            app:fabCustomSize="52dp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        app:cardBackgroundColor="@color/ColorWhite"
        android:layout_margin="2dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:id="@+id/detail_fragment_restaurant_and_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_fragment_banner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="RESTAURANT"
                    android:textColor="@color/ColorWhite"
                    android:textSize="@dimen/default_title_size" />

                <ImageView
                    android:id="@+id/detail_fragment_rating_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/star_full"
                    android:tint="@color/quantum_yellow600"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/detail_fragment_rating_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/star_full"
                    android:tint="@color/quantum_yellow600"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/detail_fragment_rating_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/star_full"
                    android:tint="@color/quantum_yellow600"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_fragment_linear_layout_adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/detail_fragment_banner_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="ADDRESS"
                    android:textColor="@color/ColorWhite"
                    android:textSize="@dimen/default_text_size" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                app:cardBackgroundColor="@color/ColorWhite"
                android:layout_margin="2dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/call_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/detail_fragment_btn_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:src="@drawable/call_icon"
                    android:text="Call"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/detail_fragment_call_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/call"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.3"
                app:cardBackgroundColor="@color/ColorWhite"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:id="@+id/like_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/detail_fragment_btn_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:padding="10dp"
                        android:scaleX="1.2"
                        android:scaleY="1.2"
                        android:src="@drawable/star_full"
                        android:text="Like"
                        android:tint="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/like"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                app:cardBackgroundColor="@color/ColorWhite"
                android:layout_margin="2dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="10dp">
            <LinearLayout
                android:id="@+id/website_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/detail_fragment_btn_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:src="@drawable/world_icon"
                    android:text="Website"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/website"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        app:cardBackgroundColor="@color/ColorWhite"
        android:layout_margin="2dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="20dp">

    <RelativeLayout
        android:id="@+id/detail_fragment_recycler_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/ColorWhite">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/places_details_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>